--- a/views/iti_students_views.xml
+++ b/views/iti_students_views.xml
@@ -1,6 +1,42 @@
 <odoo>
     <data>
 
+        <record id="students_kanban_view" model="ir.ui.view">
+            <field name="name">Students Kanban View</field>
+            <field name="model">iti.students</field>
+            <field name="arch" type="xml">
+                <kanban class="o_kanban_students">
+                    <field name="name"/>
+                    <field name="id"/>
+                    <field name="image"/>
+                    <field name="gender"/>
+                    <field name="track_id"/>
+                    <templates>
+                        <t t-name="kanban-box">
+                            <div t-attf-class="oe_kanban_global_click">
+                                <div class="o_kanban_image">
+                                    <img alt="Avatar"
+                                         t-att-src="kanban_image('library.book', 'image',record.id.raw_value)"/>
+                                </div>
+                                <div class="oe_kanban_details">
+                                    <strong class="o_kanban_record_title">
+                                        <field name="name"/>
+                                    </strong>
+                                     <div t-if="record.gender.value">
+                                        <t t-esc="record.gender.value"/>
+                                    </div>
+                                     <div t-if="record.track_id.value">
+                                        <t t-esc="record.track_id.value"/>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </t>
+                    </templates>
+                </kanban>
+            </field>
+        </record>
+
         <record id="students_tree_view" model="ir.ui.view">
             <field name="name">Students Tree View</field>
             <field name="model">iti.students</field>
@@ -24,9 +60,9 @@
                 <form>
                     <header>
                         <button string="Set First Interview" type="object" name="change_state"
-                        attrs="{'invisible':[('state', '!=', 'applied')]}"/>
+                                attrs="{'invisible':[('state', '!=', 'applied')]}"/>
 
-                        <button string="Set Second Interview" type="object"  states="first" name="change_state"/>
+                        <button string="Set Second Interview" type="object" states="first" name="change_state"/>
                         <button string="Passed" type="object" states="second" name="set_passed"/>
                         <button string="Rejected" type="object" states="second" name="set_rejected"/>
                         <button string="Back to Applied" type="object" states="passed,rejected" name="change_state"/>
@@ -46,7 +82,7 @@
                             <group string="Additional Info">
                                 <field name="state"/>
                                 <field name="accepted"/>
-                                <field name="salary" />
+                                <field name="salary"/>
                                 <field name="tax"/>
                                 <field name="net_salary"/>
                                 <field name="image" widget="image" style="max-width:100px"/>
@@ -69,6 +105,7 @@
         <record id="students_action" model="ir.actions.act_window">
             <field name="name">Students</field>
             <field name="res_model">iti.students</field>
+            <field name="view_mode">kanban,tree,form</field>
         </record>
 
         <menuitem id="iti_root" name="ITI"/>
